--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {
 
 body{
     background: url(imagens/fundo-madeira.jpg) no-repeat top center;
-    background-size cover;
+    background-size: cover;
     background-attachment: fixed;
 }
 
@@ -32,5 +32,12 @@ section#telefone {
     height: 627px;
     width: 311px;
     background:url(imagens/frame-iphone.png) no-repeat;
+}
 
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 }
